*** Unreleased ***
- Enhancements
Include symfony framework
Ability to request holiday in days (optionnal)
Add a 2nd notifications workflow
Ability to check permissions on kernel.request event
Ability to add documents on absences
Ability to change user password
Move admin/info pages into a controller
Abiblity to request holiday on half day
Add free breaktimes
Add unit tests

-Fixes
Add raw filter on agent templates for fields services, right and skills
Fix undefined indexes on statistiques/service.php & statut.php
Fix checking email settings on configuration page
Fix the wrong red marking in the diaries
Allow selection of days in other months on datepickers
Fix wrong SR (without meal) marking on gray cells
Allow modification and validation of admins leave request
Show information messages on the add absence form
Fix error "Cannot declare App\Model\Agent" when importing planning model
Fix the creation of status and service CSS classes in the planning.js file
Rename recup_samedi to comp_time
Fixe a warning when a day planning is empty
Correct use of PresentSet class in planning/poste/index
Fix saving status and services in agent's form
Use the port when checking LDAP settings

*** Version 19.10.00       (2019-10-31)   ***
- Enhancements
Allow planning comments to be always displayed.
Show a short 3 digits version number on footer
add project information in composer
hash passwords improvement
Improves performances on statistics pages
LDAP authentication improvement

- Fixes
Do not import deleted agents
Fix site verification on structure management

*** Version 19.04.03       (2019-07-26)   ***
- Fixes
Fix misallocation of rights in multisites mode
Fix bug #86, Wrong CAS version numbers

*** Version 19.04.02       (2019-07-13)   ***
- Fixes
Fix the error that prevented the import of some plannings
Imports gray cells when importing plannings
Prioritizes the absence class over the out-of-work-time class in planning views

*** Version 19.04.01       (2019-05-17)   ***